--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Richard Mulvany
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: mmistakes/minimal-mistakes
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
+  - jekyll-seo-tag
