--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Richard Mulvany
-remote_theme: mmistakes/minimal-mistakes
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
