--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Richard Mulvany
+logo: https://avatars.githubusercontent.com/u/143214470?s=400&u=8b4fd270c29f792ad9c36062f13800bfe28b1d7b&v=4
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
